--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <main>
+        
+    </main>
     <script src="app.js"></script>
 </body>
 </html>
