--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,20 @@
     <link rel="stylesheet" href="/dist/css/style.min.css">
     <title>Document</title>
 </head>
+
 <body>
     <main>
-        
+        <section class="text">
+            <h2 class="text__title">
+                <span>w</span><span>e</span><span>l</span><span>c</span><span>o</span><span>m</span><span>e</span><span>!</span>
+            </h2>
+            <p class="text__date">01/01/2021</p>
+        </section>
+        <div class="image__wrapper">
+            <img src="/img/girl.png" alt="Girl" class="image">
+        </div>
     </main>
     <script src="app.js"></script>
 </body>
+
 </html>
