--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2 class="text__title">
                 <span>w</span><span>e</span><span>l</span><span>c</span><span>o</span><span>m</span><span>e</span><span>!</span>
             </h2>
-            <p class="text__date">01/01/2021</p>
+            <p class="text__date"></p>
         </section>
         <div class="image__wrapper">
             <img src="/img/girl.png" alt="Girl" class="image">
